src/objects/PR_Change__c.object
<CustomObject>
    <fields>
        <fullName>Change_Amount__c</fullName>
        <label>Change Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Order_Date__c</fullName>
        <label>Change Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Order_PR__c</fullName>
        <inlineHelpText>This is the temporary PR number in Coupa</inlineHelpText>
        <label>Change Order PR#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Change_Reason__c</fullName>
        <label>PR Change Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Request__c</fullName>
        <label>Purchase Request</label>
        <referenceTo>Purchase_Request__c</referenceTo>
        <relationshipLabel>PR Changes</relationshipLabel>
        <relationshipName>PR_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PR Change</label>
    <nameField>
        <label>PR Changes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PR Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>